2004-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed the libgda branch to HEAD.

2004-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center has been branched.

2004-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add a gnome-2.8 release
	section.

2004-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gtksourceview has been branched.

2004-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gimp has been branched (gimp-2-0).

2004-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gok has been branched.

2004-04-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: bug-buddy has been branched.

2004-04-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor has been branched.

2004-04-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been branched.

2004-04-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnopernicus was silently branched.

2004-04-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed nautilus-mozilla.
	Presumably dead module -- no non-translator activity for
	two years.

2004-04-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ggv has been branched.

2004-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-mag has been branched.

2004-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-terminal has been branched.

2004-04-04  Dafydd Harries  <daf@muse.19inch.net>

	* translation-status.xml: gedit has been branched for GNOME 2.6.

2004-04-02  Dafydd Harries  <daf@muse.19inch.net>

	* translation-status.xml: nautilus-cd-burner has been branched.

2004-03-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-vfs has been branched.
