@@ -1871,17 +1871,6 @@
       </component>
     </version>
   </module>
-  <module name="libgtcpsocket">
-    <version release="gnome-2.8">
-      <component name="libgtcpsocket" dir="libgtcpsocket" group="extras">
-       <podir dir="po"/>
-       <potname name="libgtcpsocket-1.0.pot"/>
-       <branch name="HEAD"/>
-       <regenerate/>
-       <download/>
-      </component>
-    </version>
-  </module>
   <module name="libgtop">
     <version release="gnome-2.6">
       <component name="libgtop" dir="libgtop" group="desktop">
