@@ -1,3 +1,7 @@
+2004-04-18  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Removed libgtcpsocket.
+
 2004-04-16  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Changed the libgda branch to HEAD.
